--- a/index.html
+++ b/index.html
@@ -41,14 +41,6 @@
       </section>
       <section id="projects" class="projects">
         <a href="#" class="project-container">
-          <img
-            src="https://assets-global.website-files.com/5d626c045bf4d84a1c256e90/652552d95421cb1725ae4bb9_PRE%20RENDER%20(0-00-14-06)-min%20(1).png"
-            alt=""
-          />
-          <p>Frontend development · visual design</p>
-          <h3>irisklabbers.nl</h3>
-        </a>
-        <a href="#" class="project-container">
             <img
               src="https://assets-global.website-files.com/5d626c045bf4d84a1c256e90/652552d95421cb1725ae4bb9_PRE%20RENDER%20(0-00-14-06)-min%20(1).png"
               alt=""
@@ -56,6 +48,22 @@
             <p>Frontend development · visual design</p>
             <h3>COBOL</h3>
         </a>
+        <a href="#" class="project-container">
+            <img
+              src="https://assets-global.website-files.com/5d626c045bf4d84a1c256e90/652552d95421cb1725ae4bb9_PRE%20RENDER%20(0-00-14-06)-min%20(1).png"
+              alt=""
+            />
+            <p>Frontend development · visual design</p>
+            <h3>irisklabbers.nl</h3>
+          </a>
+        <a href="#" class="project-container">
+            <img
+              src="https://assets-global.website-files.com/5d626c045bf4d84a1c256e90/652552d95421cb1725ae4bb9_PRE%20RENDER%20(0-00-14-06)-min%20(1).png"
+              alt=""
+            />
+            <p>Frontend development · visual design</p>
+            <h3>Brandstov</h3>
+          </a>
           <a href="#" class="project-container">
             <img
               src="https://assets-global.website-files.com/5d626c045bf4d84a1c256e90/652552d95421cb1725ae4bb9_PRE%20RENDER%20(0-00-14-06)-min%20(1).png"
