Add single porject page and styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/footer.css" />
   </head>
   <body>
-    <header>
+    <header id="header">
       <nav>
         <div class="image-wrapper">
             <a href="#"><svg id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 528 416"
@@ -40,36 +40,36 @@
           <div class="line"></div>
       </section>
       <section id="projects" class="projects">
-        <a href="#" class="project-container">
+        <a href="./public/article.html" class="project-container">
             <img
-              src="https://assets-global.website-files.com/5d626c045bf4d84a1c256e90/652552d95421cb1725ae4bb9_PRE%20RENDER%20(0-00-14-06)-min%20(1).png"
+              src="./images/placeholder.jpg"
               alt=""
             />
-            <p>Frontend development · visual design</p>
+            <p>Development · Design · Strategy</p>
             <h3>COBOL</h3>
         </a>
         <a href="#" class="project-container">
             <img
-              src="https://assets-global.website-files.com/5d626c045bf4d84a1c256e90/652552d95421cb1725ae4bb9_PRE%20RENDER%20(0-00-14-06)-min%20(1).png"
+              src="./images/placeholder.jpg"
               alt=""
             />
-            <p>Frontend development · visual design</p>
+            <p>Development · Design</p>
             <h3>irisklabbers.nl</h3>
           </a>
         <a href="#" class="project-container">
             <img
-              src="https://assets-global.website-files.com/5d626c045bf4d84a1c256e90/652552d95421cb1725ae4bb9_PRE%20RENDER%20(0-00-14-06)-min%20(1).png"
+              src="./images/placeholder.jpg"
               alt=""
             />
-            <p>Frontend development · visual design</p>
+            <p>Development · Strategy</p>
             <h3>Brandstov</h3>
           </a>
           <a href="#" class="project-container">
             <img
-              src="https://assets-global.website-files.com/5d626c045bf4d84a1c256e90/652552d95421cb1725ae4bb9_PRE%20RENDER%20(0-00-14-06)-min%20(1).png"
+              src="./images/placeholder.jpg"
               alt=""
             />
-            <p>Frontend development · visual design</p>
+            <p>Frontend development · Tester</p>
             <h3>Yallaswap</h3>
           </a>
       </section>
