--- a/public/article.html
+++ b/public/article.html
@@ -11,33 +11,23 @@
     <link rel="stylesheet" href="../styles/footer.css" />
   </head>
   <body>
-    <header>
+    <header id="header">
       <nav>
         <div class="image-wrapper">
-          <a href="#">
-            <svg
-              id="Laag_1"
-              data-name="Laag 1"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 528 416"
-              class="logo"
-            >
-              <path
-                class="path"
-                stroke="#ebdbcb"
-                stroke-width="4"
-                d="M160,0V304.41A111.12,111.12,0,0,1,140,368.13a111.84,111.84,0,0,1-91.86,48.08h-.1v-320A48.17,48.17,0,0,0,0,48.07V0ZM319.86,0a111.79,111.79,0,0,0-111.8,111.8V416.21h.08A111.81,111.81,0,0,0,320,304.41V0ZM479.93,320V0h-.08A111.79,111.79,0,0,0,368,111.8V416.21H528V368.13A48.16,48.16,0,0,1,479.93,320Z"/>
+            <a href="../index.html"><svg id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 528 416"
+                class="logo">
+                <path class="path" stroke="#ebdbcb" stroke-width="4"
+                    d="M160,0V304.41A111.12,111.12,0,0,1,140,368.13a111.84,111.84,0,0,1-91.86,48.08h-.1v-320A48.17,48.17,0,0,0,0,48.07V0ZM319.86,0a111.79,111.79,0,0,0-111.8,111.8V416.21h.08A111.81,111.81,0,0,0,320,304.41V0ZM479.93,320V0h-.08A111.79,111.79,0,0,0,368,111.8V416.21H528V368.13A48.16,48.16,0,0,1,479.93,320Z" />
             </svg></a>
         </div>
         <ul class="menu-items">
-          <li class="menu-item">
-            <a href="mailto:inju@hotmail.nl">Contact</a>
-          </li>
+          <li class="menu-item"><a href="#projects">Projects</a></li>
+          <li class="menu-item"><a href="mailto:inju@hotmail.nl">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <main>
-        <a href="#" class="back-home">Back home</a>
+    <header class="hero">
+        <a href="../index.html" class="back-home">Back home</a>
         <p class="label">Dit is een label</p>
       <h1>Yallaswap</h1>
       <p>
@@ -55,8 +45,25 @@
             <span>Strategy</span>
         </div>
         <div class="right">
-            <a href="" class="button secondary">Live website</a>
+            <a href="#"><button class="button secondary">Live website</button></a>
         </div>
+      </div>
+    </header>
+    <main>
+      <img src="../images/placeholder.jpg" alt="" class="row-single-image">
+      <div class="content">
+        <p>I am excited to present my work on THE MAG WRAP, the greatest rap talent
+          show in the Czech Republic and Slovakia, spotlighting young and upcoming
+          artists.</p>
+      </div>
+      <div class="row-triple-image">
+        <img src="../images/placeholder.jpg" alt="">
+        <img src="../images/placeholder.jpg" alt="">
+        <img src="../images/placeholder.jpg" alt="">
+      </div>
+      <div class="row-double-image">
+        <img src="../images/placeholder.jpg" alt="">
+        <img src="../images/placeholder.jpg" alt="">
       </div>
     </main>
   </body>
