Add preview vids for projects

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/projects.css" />
     <link rel="stylesheet" href="./styles/contact.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
+    <script src="./scripts/playVideo.js" defer></script>
   </head>
   <body>
     <header id="header">
@@ -41,34 +42,34 @@
       </section>
       <section id="projects" class="projects">
         <a href="./public/article.html" class="project-container">
-            <img
-              src="./images/placeholder.jpg"
-              alt=""
-            />
+            <video width="320" height="240" loop muted>
+              <source src="./videos/COBOL.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
             <p>Development · Design · Strategy</p>
             <h3>COBOL</h3>
         </a>
         <a href="#" class="project-container">
-            <img
-              src="./images/placeholder.jpg"
-              alt=""
-            />
+          <video width="320" height="240" loop muted>
+            <source src="./videos/irisklabbers.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
             <p>Development · Design</p>
             <h3>irisklabbers.nl</h3>
           </a>
         <a href="#" class="project-container">
-            <img
-              src="./images/placeholder.jpg"
-              alt=""
-            />
+          <video width="320" height="240" loop muted>
+            <source src="./videos/brandstov.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
             <p>Development · Strategy</p>
             <h3>Brandstov</h3>
           </a>
           <a href="#" class="project-container">
-            <img
-              src="./images/placeholder.jpg"
-              alt=""
-            />
+            <video width="320" height="240" loop muted>
+              <source src="./videos/yallaswap.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
             <p>Frontend development · Tester</p>
             <h3>Yallaswap</h3>
           </a>
