--- a/public/article.html
+++ b/public/article.html
@@ -21,7 +21,7 @@
             </svg></a>
         </div>
         <ul class="menu-items">
-          <li class="menu-item"><a href="#projects">Projects</a></li>
+          <li class="menu-item"><a href="../index.html#projects">Projects</a></li>
           <li class="menu-item"><a href="mailto:inju@hotmail.nl">Contact</a></li>
         </ul>
       </nav>
