Link project blocks to static project file

--- a/public/article.html
+++ b/public/article.html
@@ -28,8 +28,8 @@
     </header>
     <header class="hero">
         <a href="../index.html" class="back-home">Back home</a>
-        <p class="label">Dit is een label</p>
-      <h1>Yallaswap</h1>
+        <p class="label">Web developer</p>
+      <h1>Brandstov</h1>
       <p>
         I am excited to present my work on THE MAG WRAP, the greatest rap talent
         show in the Czech Republic and Slovakia, spotlighting young and upcoming
@@ -45,7 +45,7 @@
             <span>Strategy</span>
         </div>
         <div class="right">
-            <a href="#"><button class="button secondary">Live website</button></a>
+            <a href="https://brandstov.github.io/brandstov-v2/" target="_blank"><button class="button secondary">Live website</button></a>
         </div>
       </div>
     </header>
