Add images and videos for brandstov project page

--- a/public/article.html
+++ b/public/article.html
@@ -16,7 +16,7 @@
         <div class="image-wrapper">
             <a href="../index.html"><svg id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 528 416"
                 class="logo">
-                <path class="path" stroke="#ebdbcb" stroke-width="4"
+                <path class="path" stroke="#fff" stroke-width="4"
                     d="M160,0V304.41A111.12,111.12,0,0,1,140,368.13a111.84,111.84,0,0,1-91.86,48.08h-.1v-320A48.17,48.17,0,0,0,0,48.07V0ZM319.86,0a111.79,111.79,0,0,0-111.8,111.8V416.21h.08A111.81,111.81,0,0,0,320,304.41V0ZM479.93,320V0h-.08A111.79,111.79,0,0,0,368,111.8V416.21H528V368.13A48.16,48.16,0,0,1,479.93,320Z" />
             </svg></a>
         </div>
@@ -50,17 +50,48 @@
       </div>
     </header>
     <main>
-      <img src="../images/placeholder.jpg" alt="" class="row-single-image">
       <div class="content">
         <p>I am excited to present my work on THE MAG WRAP, the greatest rap talent
           show in the Czech Republic and Slovakia, spotlighting young and upcoming
           artists.</p>
       </div>
-      <div class="row-triple-image">
-        <img src="../images/placeholder.jpg" alt="">
-        <img src="../images/placeholder.jpg" alt="">
-        <img src="../images/placeholder.jpg" alt="">
+      <video width="320" height="240" class="project-video" controls muted>
+        <source src="../videos/brandstov.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <div class="row-double-image">
+        <p>Informatie over hoe brandstov is onstaan, de ideeen en fantsien die we hadden en hoe wij 
+          nog steeds zullen werken aan het vervullen van onze dromen. David dike shoutous voor de designs hierbenden geven:
+        </p>
+        <p>Informatie over hoe brandstov is onstaan, de ideeen en fantsien die we hadden en hoe wij 
+          nog steeds zullen werken aan het vervullen van onze dromen. David dike shoutous voor de designs hierbenden geven:
+        </p>
       </div>
+        <figure class="row-triple-image">
+          <img src="../images/projects/brandstov/site-design-1.png" alt="">
+          <img src="../images/projects/brandstov/site-design-2.png" alt="">
+          <img src="../images/projects/brandstov/site-design-3.png" alt="">
+          <figcaption>Dit heeft david helemaal alleen gedaan en hier verdient hij dikke kus voor</figcaption>
+        </figure>
+      <div class="row-double-image">
+        <p>Hello world</p>
+        <p>Hello world</p>
+      </div>
+      <div class="row-double-image">
+        <video width="320" height="240" class="project-video" controls muted>
+          <source src="../videos/brandstov/webleaders.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <video width="320" height="240" class="project-video" controls muted>
+          <source src="../videos/brandstov/magisch-manifesteren.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+      <video width="320" height="240" class="project-video" controls muted>
+        <source src="../videos/brandstov/topcare.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <img src="../images/projects/brandstov/brandstov-designs.png" alt="">
       <div class="row-double-image">
         <img src="../images/placeholder.jpg" alt="">
         <img src="../images/placeholder.jpg" alt="">
