Add cv link instead of another contact

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     </main>
     <footer>
         <div class="left">
-            <h4>/ Contact me</h4>
-            <a href="mailto:inju@hotmail.nl">inju@hotmail.nl</a>
+            <h4>/ Skills</h4>
+            <a href="./files/inju_michorius_CV.pdf" target="_blank">Curriculum Vitae</a>
         </div>
         <div class="right">
             <h4>/ Follow me</h4>
