Fix figcaption and style single project page

--- a/public/article.html
+++ b/public/article.html
@@ -50,8 +50,8 @@
       </div>
     </header>
     <main>
-      <div class="content">
-        <p>I am excited to present my work on THE MAG WRAP, the greatest rap talent
+      <div class="row-single-image text-container">
+        <p class="project-paragraph">I am excited to present my work on THE MAG WRAP, the greatest rap talent
           show in the Czech Republic and Slovakia, spotlighting young and upcoming
           artists.</p>
       </div>
@@ -59,11 +59,11 @@
         <source src="../videos/brandstov.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
-      <div class="row-double-image">
-        <p>Informatie over hoe brandstov is onstaan, de ideeen en fantsien die we hadden en hoe wij 
+      <div class="row-double-image text-container">
+        <p class="project-paragraph">Informatie over hoe brandstov is onstaan, de ideeen en fantsien die we hadden en hoe wij 
           nog steeds zullen werken aan het vervullen van onze dromen. David dike shoutous voor de designs hierbenden geven:
         </p>
-        <p>Informatie over hoe brandstov is onstaan, de ideeen en fantsien die we hadden en hoe wij 
+        <p class="project-paragraph">Informatie over hoe brandstov is onstaan, de ideeen en fantsien die we hadden en hoe wij 
           nog steeds zullen werken aan het vervullen van onze dromen. David dike shoutous voor de designs hierbenden geven:
         </p>
       </div>
@@ -71,11 +71,11 @@
           <img src="../images/projects/brandstov/site-design-1.png" alt="">
           <img src="../images/projects/brandstov/site-design-2.png" alt="">
           <img src="../images/projects/brandstov/site-design-3.png" alt="">
-          <figcaption>Dit heeft david helemaal alleen gedaan en hier verdient hij dikke kus voor</figcaption>
+          <figcaption><i>Dit heeft david helemaal alleen gedaan en hier verdient hij dikke kus voor</i></figcaption>
         </figure>
-      <div class="row-double-image">
-        <p>Hello world</p>
-        <p>Hello world</p>
+      <div class="row-double-image text-container">
+        <p class="project-paragraph">Nadat we een website hadden gebouwd en de algemene plannen hadden besproken zijn we een tijdje aan de slag gegaaan voor dennis petri. Dennis petri is een man die alles kan en heeft ervaring met freenlace work met dank aan zijn bedrijf handoff.</p>
+        <p class="project-paragraph">Hieronder vind je een aantal werken en concepten die wij hebben aangeleverd in opdracht van handoff voor verschillende porjecten.</p>
       </div>
       <div class="row-double-image">
         <video width="320" height="240" class="project-video" controls muted>
@@ -87,11 +87,31 @@
           Your browser does not support the video tag.
         </video>
       </div>
-      <video width="320" height="240" class="project-video" controls muted>
-        <source src="../videos/brandstov/topcare.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+      <div class="text-container">
+        <p class="project-paragraph">Dit zijn verschillende projecten waarbij wij concepten hebben aangeleverd voor een oplossingsrichting/branding. Hierbij had ik de technische regie in handen.</p>
+      </div>
+      <div class="row-single-image">
+        <video width="320" height="240" class="project-video" controls muted>
+          <source src="../videos/brandstov/topcare.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
       <img src="../images/projects/brandstov/brandstov-designs.png" alt="">
+    <div class="line"></div>
     </main>
+    <footer>
+      <div class="left">
+          <h4>/ Skills</h4>
+          <a href="./files/inju_michorius_CV.pdf" target="_blank">Curriculum Vitae</a>
+      </div>
+      <div class="right">
+          <h4>/ Follow me</h4>
+          <ul class="footer-items">
+              <li><a href="https://github.com/InjuMichorius">GitHub</a></li>
+              <li><a href="https://www.linkedin.com/in/jumichorius/">Linkedin</a></li>
+              <li><a href="https://www.instagram.com/injuux/">Instagram</a></li>
+          </ul>
+        </div>
+    </footer>
   </body>
 </html>
