Add pagination and cta section

--- a/public/article.html
+++ b/public/article.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/nav.css" />
     <link rel="stylesheet" href="../styles/single-project.css" />
+    <link rel="stylesheet" href="../styles/project-cta.css" />
+    <link rel="stylesheet" href="../styles/pagination.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
+    <script src="../scripts/playVideo.js" defer></script>
   </head>
   <body>
     <header id="header">
@@ -96,7 +99,30 @@
           Your browser does not support the video tag.
         </video>
       </div>
-      <img src="../images/projects/brandstov/brandstov-designs.png" alt="">
+      <section class="cta-section">
+        <h2 class="cta-title">Let's make something awesome!</h2>
+        <a href="mailto:inju@hotmail.nl" class="shimmer"><span>i</span><span>n</span><span>j</span><span>u</span><span>@</span><span>h</span><span>o</span><span>t</span><span>m</span><span>a</span><span>i</span><span>l</span><span>.</span><span>n</span><span>l</span></a>
+      </section>
+      <h2>Other projects</h2>
+      <div class="line"></div>
+      <div class="project-pagination">
+        <a href="./public/article.html" class="project-container">
+          <video width="320" height="240" loop muted>
+            <source src="../videos/brandstov.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+            <p>Previous project</p>
+            <h3>Brandstov</h3>
+          </a>
+        <a href="./public/article.html" class="project-container">
+          <video width="320" height="240" loop muted>
+            <source src="../videos/irisklabbers.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+            <p>Next project</p>
+            <h3>irisklabbers.nl</h3>
+          </a>
+      </div>
     <div class="line"></div>
     </main>
     <footer>
