Copyrighting for brandstov.html and serperate article file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="line"></div>
       </section>
       <section id="projects" class="projects">
-        <a href="./public/article.html" class="project-container">
+        <a href="./public/brandstov.html" class="project-container">
           <video width="320" height="240" loop muted>
             <source src="./videos/brandstov.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -49,15 +49,15 @@
             <p>Development · Strategy</p>
             <h3>Brandstov</h3>
           </a>
-        <a href="./public/article.html" class="project-container">
+        <a href="./public/irisklabbers.html" class="project-container">
           <video width="320" height="240" loop muted>
             <source src="./videos/irisklabbers.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
             <p>Development · Design</p>
-            <h3>irisklabbers.nl</h3>
+            <h3>Iris Klabbers</h3>
           </a>
-          <a href="./public/article.html" class="project-container">
+          <a href="./public/cobol.html" class="project-container">
             <video width="320" height="240" loop muted>
               <source src="./videos/COBOL.mp4" type="video/mp4">
               Your browser does not support the video tag.
@@ -65,7 +65,7 @@
             <p>Development · Design · Strategy</p>
             <h3>COBOL</h3>
         </a>
-          <a href="./public/article.html" class="project-container">
+          <a href="./public/yallaswap.html" class="project-container">
             <video width="320" height="240" loop muted>
               <source src="./videos/yallaswap.mp4" type="video/mp4">
               Your browser does not support the video tag.
