--- a/public/brandstov.html
+++ b/public/brandstov.html
@@ -34,12 +34,7 @@
         <p class="label">Web developer</p>
       <h1>Brandstov</h1>
       <p>
-        I am excited to present my work on THE MAG WRAP, the greatest rap talent
-        show in the Czech Republic and Slovakia, spotlighting young and upcoming
-        artists. Now in its second year, the competition has once again
-        entrusted me with the opportunity to define and create its distinctive
-        visual style. I aimed to capture the essence of the show and bring it to
-        life through a unique blend of 2D and 3D motion design elements.
+        Brandstov is a company where I have had the pleasure of experimenting web development with college friends. It arose from a desire to remove digital ambiguities and the will to create beautiful, user-friendly solutions.
       </p>
       <div class="meta-data">
         <div class="left">
@@ -53,32 +48,31 @@
       </div>
     </header>
     <main>
-      <div class="row-single-image text-container">
-        <p class="project-paragraph">I am excited to present my work on THE MAG WRAP, the greatest rap talent
-          show in the Czech Republic and Slovakia, spotlighting young and upcoming
-          artists.</p>
+      <div class="row-double-image text-container">
+        <p class="project-paragraph">From 2022 to 2023 I worked with <a href="https://www.linkedin.com/in/joppe-pelgrim-58499aa9/">Joppe Pelgrim</a> and <a href="https://www.linkedin.com/in/david-van-rumpt-b5a846180/">David van Rumpt</a> on various clients on behalf of Brandstov. During this period I invested a lot of time in researching and practicing web development, because I was responsible for the technical side of Branstov.</p>
+        <p class="project-paragraph">In a team of three, each with our own strengths (Storytelling, Design and Development), we built Brandstov and our future vision together. We looked for a challenge and pushed the boundaries of the web.</p>
       </div>
       <video width="320" height="240" class="project-video" controls muted>
         <source src="../videos/brandstov.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <div class="row-double-image text-container">
-        <p class="project-paragraph">Informatie over hoe brandstov is onstaan, de ideeen en fantsien die we hadden en hoe wij 
-          nog steeds zullen werken aan het vervullen van onze dromen. David dike shoutous voor de designs hierbenden geven:
+        <p class="project-paragraph">
+          Once Joppe had his solution designed by David, I started working on it technically. I translated the design to web and took responsive web design, CMS usage and animations into account.
         </p>
-        <p class="project-paragraph">Informatie over hoe brandstov is onstaan, de ideeen en fantsien die we hadden en hoe wij 
-          nog steeds zullen werken aan het vervullen van onze dromen. David dike shoutous voor de designs hierbenden geven:
+        <p class="project-paragraph">
+          At brandstov I learned to work with Wordpress, Webflow, Umbraco and Squarespace and increased my knowledge of HTML, CSS and Javascript. Below are some designs made by David:
         </p>
       </div>
         <figure class="row-triple-image">
           <img src="../images/projects/brandstov/site-design-1.png" alt="">
           <img src="../images/projects/brandstov/site-design-2.png" alt="">
           <img src="../images/projects/brandstov/site-design-3.png" alt="">
-          <figcaption><i>Dit heeft david helemaal alleen gedaan en hier verdient hij dikke kus voor</i></figcaption>
+          <figcaption><i>All three designs are made by Pixel Magician David van Rumpt</i></figcaption>
         </figure>
       <div class="row-double-image text-container">
-        <p class="project-paragraph">Nadat we een website hadden gebouwd en de algemene plannen hadden besproken zijn we een tijdje aan de slag gegaaan voor dennis petri. Dennis petri is een man die alles kan en heeft ervaring met freenlace work met dank aan zijn bedrijf handoff.</p>
-        <p class="project-paragraph">Hieronder vind je een aantal werken en concepten die wij hebben aangeleverd in opdracht van handoff voor verschillende porjecten.</p>
+        <p class="project-paragraph">After we built a website, it was time to see how we could use our skills to help people increase their digital presence. Through an acquaintance of David we ended up at Handoff, a company owned by Dennis Petri that has a lot of experience with freelance work.</p>
+        <p class="project-paragraph">Working under the name Handoff for a while allowed us to have an impact on real customers, without much risk and with room to experiment. Below you will find a number of designs, sketches and concepts that we have provided for Handoff.</p>
       </div>
       <div class="row-double-image">
         <video width="320" height="240" class="project-video" controls muted>
@@ -90,8 +84,9 @@
           Your browser does not support the video tag.
         </video>
       </div>
-      <div class="text-container">
-        <p class="project-paragraph">Dit zijn verschillende projecten waarbij wij concepten hebben aangeleverd voor een oplossingsrichting/branding. Hierbij had ik de technische regie in handen.</p>
+      <div class="row-double-image text-container">
+        <p class="project-paragraph">Although everything shown here is rough and has not yet reached its full potential, it gave us a clear idea of where our passions lay. Building cool things and giving new experiences.</p>
+        <p class="project-paragraph">All these designs are made in vanilla HTML, CSS Javascript, some using API's and libraries</p>
       </div>
       <div class="row-single-image">
         <video width="320" height="240" class="project-video" controls muted>
@@ -106,15 +101,15 @@
       <h2>Other projects</h2>
       <div class="line"></div>
       <div class="project-pagination">
-        <a href="./public/article.html" class="project-container">
+        <a href="../public/yallaswap.html" class="project-container">
           <video width="320" height="240" loop muted>
-            <source src="../videos/brandstov.mp4" type="video/mp4">
+            <source src="../videos/yallaswap.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
             <p>Previous project</p>
-            <h3>Brandstov</h3>
+            <h3>Yallaswap</h3>
           </a>
-        <a href="./public/article.html" class="project-container">
+        <a href="../public/article.html" class="project-container">
           <video width="320" height="240" loop muted>
             <source src="../videos/irisklabbers.mp4" type="video/mp4">
             Your browser does not support the video tag.
