--- a/public/cobol.html
+++ b/public/cobol.html
@@ -101,21 +101,21 @@
       <h2>Other projects</h2>
       <div class="line"></div>
       <div class="project-pagination">
-        <a href="./public/article.html" class="project-container">
-          <video width="320" height="240" loop muted>
-            <source src="../videos/brandstov.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-            <p>Previous project</p>
-            <h3>Brandstov</h3>
-          </a>
-        <a href="./public/article.html" class="project-container">
+        <a href="../public/irisklabbers.html" class="project-container">
           <video width="320" height="240" loop muted>
             <source src="../videos/irisklabbers.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
+            <p>Previous project</p>
+            <h3>Iris Klabbers</h3>
+          </a>
+        <a href="../public/yallaswap.html" class="project-container">
+          <video width="320" height="240" loop muted>
+            <source src="../videos/yallaswap.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
             <p>Next project</p>
-            <h3>irisklabbers.nl</h3>
+            <h3>Yallaswap</h3>
           </a>
       </div>
     <div class="line"></div>
@@ -123,7 +123,7 @@
     <footer>
       <div class="left">
           <h4>/ Skills</h4>
-          <a href="./files/inju_michorius_CV.pdf" target="_blank">Curriculum Vitae</a>
+          <a href="../files/inju_michorius_CV.pdf" target="_blank">Curriculum Vitae</a>
       </div>
       <div class="right">
           <h4>/ Follow me</h4>
