--- a/public/irisklabbers.html
+++ b/public/irisklabbers.html
@@ -101,7 +101,7 @@
       <h2>Other projects</h2>
       <div class="line"></div>
       <div class="project-pagination">
-        <a href="./public/article.html" class="project-container">
+        <a href="../public/brandstov.html" class="project-container">
           <video width="320" height="240" loop muted>
             <source src="../videos/brandstov.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -109,13 +109,13 @@
             <p>Previous project</p>
             <h3>Brandstov</h3>
           </a>
-        <a href="./public/article.html" class="project-container">
+        <a href="../public/cobol.html" class="project-container">
           <video width="320" height="240" loop muted>
-            <source src="../videos/irisklabbers.mp4" type="video/mp4">
+            <source src="../videos/COBOL.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
             <p>Next project</p>
-            <h3>irisklabbers.nl</h3>
+            <h3>COBOL</h3>
           </a>
       </div>
     <div class="line"></div>
@@ -123,7 +123,7 @@
     <footer>
       <div class="left">
           <h4>/ Skills</h4>
-          <a href="./files/inju_michorius_CV.pdf" target="_blank">Curriculum Vitae</a>
+          <a href="../files/inju_michorius_CV.pdf" target="_blank">Curriculum Vitae</a>
       </div>
       <div class="right">
           <h4>/ Follow me</h4>
