Add header hide on scroll and images for mobile view

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/projects.css" />
     <link rel="stylesheet" href="./styles/contact.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
+    <script src="./scripts/hideNavOnScroll.js" defer></script>
     <script src="./scripts/playVideo.js" defer></script>
   </head>
   <body>
@@ -42,7 +43,8 @@
       </section>
       <section id="projects" class="projects">
         <a href="./public/brandstov.html" class="project-container">
-          <video width="320" height="240" loop muted>
+          <img src="./images/brandstov.png" alt="" class="preview-image">
+          <video width="320" height="240" class="preview-video" loop muted>
             <source src="./videos/brandstov.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -50,7 +52,8 @@
             <h3>Brandstov</h3>
           </a>
         <a href="./public/irisklabbers.html" class="project-container">
-          <video width="320" height="240" loop muted>
+          <img src="./images/irisklabbers.png" alt="" class="preview-image">
+          <video width="320" height="240" class="preview-video" loop muted>
             <source src="./videos/irisklabbers.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -58,7 +61,8 @@
             <h3>Iris Klabbers</h3>
           </a>
           <a href="./public/cobol.html" class="project-container">
-            <video width="320" height="240" loop muted>
+            <img src="./images/COBOL.png" alt="" class="preview-image">
+            <video width="320" height="240" class="preview-video" loop muted>
               <source src="./videos/COBOL.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -66,7 +70,8 @@
             <h3>COBOL</h3>
         </a>
           <a href="./public/yallaswap.html" class="project-container">
-            <video width="320" height="240" loop muted>
+            <img src="./images/yallaswap.png" alt="" class="preview-image">
+            <video width="320" height="240" class="preview-video" loop muted>
               <source src="./videos/yallaswap.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
