--- a/public/brandstov.html
+++ b/public/brandstov.html
@@ -102,7 +102,8 @@
       <div class="line"></div>
       <div class="project-pagination">
         <a href="../public/yallaswap.html" class="project-container">
-          <video width="320" height="240" loop muted>
+          <img src="../images/yallaswap.png" alt="" class="preview-image">
+          <video width="320" height="240" class="preview-video" loop muted>
             <source src="../videos/yallaswap.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -110,7 +111,8 @@
             <h3>Yallaswap</h3>
           </a>
         <a href="../public/irisklabbers.html" class="project-container">
-          <video width="320" height="240" loop muted>
+          <img src="../images/irisklabbers.png" alt="" class="preview-image">
+          <video width="320" height="240" class="preview-video" loop muted>
             <source src="../videos/irisklabbers.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
