--- a/public/yallaswap.html
+++ b/public/yallaswap.html
@@ -102,7 +102,8 @@
       <div class="line"></div>
       <div class="project-pagination">
         <a href="../public/cobol.html" class="project-container">
-          <video width="320" height="240" loop muted>
+          <img src="../images/COBOL.png" alt="" class="preview-image">
+          <video width="320" height="240" class="preview-video" loop muted>
             <source src="../videos/COBOL.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -110,7 +111,8 @@
             <h3>COBOL</h3>
           </a>
         <a href="../public/brandstov.html" class="project-container">
-          <video width="320" height="240" loop muted>
+          <img src="../images/brandstov.png" alt="" class="preview-image">
+          <video width="320" height="240" class="preview-video" loop muted>
             <source src="../videos/brandstov.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
