--- a/public/brandstov.html
+++ b/public/brandstov.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inju Michorius - Frontend Developer</title>
+    <title>Brandstov - Inju Michorius - Frontend Developer</title>
     <link rel="icon" type="image/x-icon" href="../icons/favicon.png" />
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/nav.css" />
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../styles/pagination.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
     <script src="../scripts/playVideo.js" defer></script>
+    <script src="../scripts/hideNavOnScroll.js" defer></script>
   </head>
   <body>
     <header id="header">
@@ -31,7 +32,7 @@
     </header>
     <header class="hero">
         <a href="../index.html" class="back-home">Back home</a>
-        <p class="label">Web developer</p>
+        <p class="label">Technical lead</p>
       <h1>Brandstov</h1>
       <p>
         Brandstov is a company where I have had the pleasure of experimenting web development with college friends. It arose from a desire to remove digital ambiguities and the will to create beautiful, user-friendly solutions.
