--- a/public/irisklabbers.html
+++ b/public/irisklabbers.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inju Michorius - Frontend Developer</title>
+    <title>Iris Klabbers - Inju Michorius - Frontend Developer</title>
     <link rel="icon" type="image/x-icon" href="../icons/favicon.png" />
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/nav.css" />
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../styles/pagination.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
     <script src="../scripts/playVideo.js" defer></script>
+    <script src="../scripts/hideNavOnScroll.js" defer></script>
   </head>
   <body>
     <header id="header">
@@ -34,66 +35,41 @@
         <p class="label">Web developer</p>
       <h1>Iris Klabbers</h1>
       <p>
-        Brandstov is a company where I have had the pleasure of experimenting web development with college friends. It arose from a desire to remove digital ambiguities and the will to create beautiful, user-friendly solutions.
+          I met Iris Klabbers, a talented photographer, artist, and friend, during our school days. She has successfully completed her art education, and her captivating work is showcased in various exhibitions across the Netherlands.
       </p>
       <div class="meta-data">
         <div class="left">
             <span>Frontend</span>
-            <span>Design</span>
-            <span>Strategy</span>
+            <span>Advising</span>
         </div>
         <div class="right">
-            <a href="https://brandstov.github.io/brandstov-v2/" target="_blank"><button class="button secondary">Live website</button></a>
+            <a href="https://injumichorius.github.io/iris-klabbers/" target="_blank"><button class="button secondary">Live website</button></a>
         </div>
       </div>
     </header>
     <main>
       <div class="row-double-image text-container">
-        <p class="project-paragraph">From 2022 to 2023 I worked with <a href="https://www.linkedin.com/in/joppe-pelgrim-58499aa9/">Joppe Pelgrim</a> and <a href="https://www.linkedin.com/in/david-van-rumpt-b5a846180/">David van Rumpt</a> on various clients on behalf of Brandstov. During this period I invested a lot of time in researching and practicing web development, because I was responsible for the technical side of Branstov.</p>
-        <p class="project-paragraph">In a team of three, each with our own strengths (Storytelling, Design and Development), we built Brandstov and our future vision together. We looked for a challenge and pushed the boundaries of the web.</p>
+        <p class="project-paragraph">
+          Collaborating with talented artist and designer <a href="https://www.linkedin.com/in/iris-klabbers/?originalSubdomain=nl">Iris Klabbers</a>, I had the honor of bringing her creative vision to life on the internet. Hailing from the Netherlands, Iris provided website designs, and I took on the role of the developer to transform her artistic concepts into a simple website.
+        </p>
+        <p class="project-paragraph">
+          This project not only serves as a virtual business card for Iris but also as an accessible online showcase, allowing art enthusiasts to engage with her work from any corner of the globe.
+        </p>
       </div>
       <video width="320" height="240" class="project-video" controls muted>
-        <source src="../videos/brandstov.mp4" type="video/mp4">
+        <source src="../videos/irisklabbers.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <div class="row-double-image text-container">
-        <p class="project-paragraph">
-          Once Joppe had his solution designed by David, I started working on it technically. I translated the design to web and took responsive web design, CMS usage and animations into account.
-        </p>
-        <p class="project-paragraph">
-          At brandstov I learned to work with Wordpress, Webflow, Umbraco and Squarespace and increased my knowledge of HTML, CSS and Javascript. Below are some designs made by David:
-        </p>
+        <p class="project-paragraph">Because the design had already been delivered, it was easy to digitally translate these works of art into a website.</p>
+        <p class="project-paragraph">I would like to thank Iris for her clarity and focus on the project, which ensured that the end result is exactly as we had imagined.</p>
       </div>
-        <figure class="row-triple-image">
-          <img src="../images/projects/brandstov/site-design-1.png" alt="">
-          <img src="../images/projects/brandstov/site-design-2.png" alt="">
-          <img src="../images/projects/brandstov/site-design-3.png" alt="">
-          <figcaption><i>All three designs are made by Pixel Magician David van Rumpt</i></figcaption>
-        </figure>
-      <div class="row-double-image text-container">
-        <p class="project-paragraph">After we built a website, it was time to see how we could use our skills to help people increase their digital presence. Through an acquaintance of David we ended up at Handoff, a company owned by Dennis Petri that has a lot of experience with freelance work.</p>
-        <p class="project-paragraph">Working under the name Handoff for a while allowed us to have an impact on real customers, without much risk and with room to experiment. Below you will find a number of designs, sketches and concepts that we have provided for Handoff.</p>
-      </div>
-      <div class="row-double-image">
-        <video width="320" height="240" class="project-video" controls muted>
-          <source src="../videos/brandstov/webleaders.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-        <video width="320" height="240" class="project-video" controls muted>
-          <source src="../videos/brandstov/magisch-manifesteren.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
-      <div class="row-double-image text-container">
-        <p class="project-paragraph">Although everything shown here is rough and has not yet reached its full potential, it gave us a clear idea of where our passions lay. Building cool things and giving new experiences.</p>
-        <p class="project-paragraph">All these designs are made in vanilla HTML, CSS Javascript, some using API's and libraries</p>
-      </div>
-      <div class="row-single-image">
-        <video width="320" height="240" class="project-video" controls muted>
-          <source src="../videos/brandstov/topcare.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
+      <figure class="row-triple-image flex-end">
+        <img src="../images/projects/irisklabbers/artwork-1.png" alt="">
+        <img src="../images/projects/irisklabbers/artwork-2.png" alt="">
+        <img src="../images/projects/irisklabbers/artwork-3.png" alt="">
+        <figcaption><i>All three designs are made by Iris Klabbers. Check her out!</i></figcaption>
+      </figure>
       <section class="cta-section">
         <h2 class="cta-title">Let's make something awesome!</h2>
         <a href="mailto:inju@hotmail.nl" class="shimmer"><span>i</span><span>n</span><span>j</span><span>u</span><span>@</span><span>h</span><span>o</span><span>t</span><span>m</span><span>a</span><span>i</span><span>l</span><span>.</span><span>n</span><span>l</span></a>
