Add title change when user leaves tab for better UX

--- a/public/irisklabbers.html
+++ b/public/irisklabbers.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iris Klabbers - Inju Michorius - Frontend Developer</title>
+    <title>Iris Klabbers - Inju Michorius</title>
     <link rel="icon" type="image/x-icon" href="../icons/favicon.png" />
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/nav.css" />
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../styles/footer.css" />
     <script src="../scripts/playVideo.js" defer></script>
     <script src="../scripts/hideNavOnScroll.js" defer></script>
+    <script src="../scripts/changeTitle.js" defer></script>
   </head>
   <body>
     <header id="header">
