Add meta desciption to pages and delete unused attributes logo svg

--- a/public/irisklabbers.html
+++ b/public/irisklabbers.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="I met Iris Klabbers, a talented photographer, artist, and friend, during our school days. She has successfully completed her art education, and her captivating work is showcased in various exhibitions across the Netherlands.">
     <title>Iris Klabbers - Inju Michorius</title>
     <link rel="icon" type="image/x-icon" href="../icons/favicon.png" />
     <link rel="stylesheet" href="../styles/main.css" />
@@ -19,7 +20,7 @@
     <header id="header">
       <nav>
         <div class="image-wrapper">
-            <a href="../index.html"><span class="sr-only">Back to home</span><svg id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 528 416"
+            <a href="../index.html"><span class="sr-only">Back to home</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 528 416"
                 class="logo">
                 <path class="path" stroke="#fff" stroke-width="4"
                     d="M160,0V304.41A111.12,111.12,0,0,1,140,368.13a111.84,111.84,0,0,1-91.86,48.08h-.1v-320A48.17,48.17,0,0,0,0,48.07V0ZM319.86,0a111.79,111.79,0,0,0-111.8,111.8V416.21h.08A111.81,111.81,0,0,0,320,304.41V0ZM479.93,320V0h-.08A111.79,111.79,0,0,0,368,111.8V416.21H528V368.13A48.16,48.16,0,0,1,479.93,320Z" />
